--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<header>
+    <nav class="navbar navbar-expand-lg bg-light px-3 border border-bottom-2">
+        <div class="container-fluid">
+          <a class="navbar-brand fs-2 fw-bold" routerLink="/">
+            <img style="width: 50px;"src="https://img.icons8.com/external-flat-icons-inmotus-design/2x/external-A-star-wars-flat-icons-inmotus-design.png" alt="">londra</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav__link__a fw-bold btn btn-outline-dark"  routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Registrate</a>
+                <a class="nav__link__a fw-bold btn btn-outline-dark" routerLink="/login" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"> Login</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+</header>
