FormRegistro terminado y footer agreggado

--- a/src/app/componentes/form-registro/form-registro.component.html
+++ b/src/app/componentes/form-registro/form-registro.component.html
@@ -1,14 +1,12 @@
-<div class="container">
-        <div class="row">
-            <div class="col-md-6 col-sm-8 col-xs-12">
-                <form class="my-3 p-3 " >
+<div class="container  ">
+                <form class="my-3 div__form bg-light" >
                     <div class="mt-3 mb-5">
                         <h3 class="text-center fs-2 fw-bold titulo__color">{{tituloForm}}</h3>
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <!---------Nombre---------------------->
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <div class="form-floating">
                                     <input type="text" class="form-control input__border" id="nombre" name="nombre" placeholder="Nombre"  >
                                     <label for="nombre" class="form-label label__color">Nombre</label>
@@ -17,31 +15,36 @@
                         </div>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <!---------Apellido---------------------->
-                            <div class="mb-3">
+                            <div class="mb-4">
                                 <div class="form-floating">
                                     <input type="text" class="form-control input__border" id="apellido" name="apellido" placeholder="apellido"  >
                                     <label for="apellido" class="form-label label__color">Apellido</label>
                                 </div>  
                             </div>
                         </div>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <!---------gmail---------------------->
+                            <div class="mb-4">
+                                <div class="form-floating">
+                                    <input type="email" class="form-control input__border" id="email" name="email" placeholder="email"  >
+                                    <label for="email" class="form-label label__color">email</label>
+                                </div>  
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <!---------pass---------------------->
+                            <div class="mb-4">
+                                <div class="form-floating">
+                                    <input type="password" class="form-control input__border" id="password" name="password" placeholder="password"  >
+                                    <label for="password" class="form-label label__color">Contraseña</label>
+                                </div>  
+                            </div>
+                        </div>
                     </div>
                     
-                    <!------------Carrera------------------->
-                    <div class="mb-3">
-                        <select class="form-select input__border select__color" aria-label="Default select example" name="select" >
-                            <option value="" disabled>Carrera</option>
-                            <option value="Ing. Industrial">Ing. Industrial</option>
-                            <option value="Ing. Informática">Ing. Informática</option>
-                            <option value="Medicina">Medicina</option>
-                            <option value="Neurología">Neurología</option>
-                          </select>  
-                    </div>
-        
                     <!-----------boton-------------------->
-                    <div class="mb-3">
+                    <div class="my-3">
                         <button class="btn bg__btn w-100" >Enviar</button>
                     </div>
-                </form>
-            </div>
-        </div>        
+                </form> 
 </div>
