--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,3 +1,10 @@
-<div class="container my-5">
-    <app-form-registro></app-form-registro>   
+<div class="container-fluid registro__bg py-5">
+    <div class="row">
+        <div class="col-md-6 col-sm-6 col-xs-12 mx-auto d-none d-sm-block d-sm-none d-md-block" > 
+            <img class="registro__img" src="https://ouch-cdn2.icons8.com/n5P8Rl1DG7rY-7FpnhpQE2Y7p6TVB7jSu9Pz5Tsi86M/rs:fit:256:282/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9zdmcvOTA0/L2YyNDQ0YzFhLTMx/M2EtNDk0ZS1hZmFh/LTg4ZDdlNWNjZWQz/MS5zdmc.png" alt="">
+        </div>
+        <div class="col-md-6 col-sm-12 col-xs-12">
+            <app-form-registro></app-form-registro>   
+        </div>
+    </div>
 </div>
