--- a/src/app/componentes/form-login/form-login.component.html
+++ b/src/app/componentes/form-login/form-login.component.html
@@ -1,1 +1,32 @@
-<p>form-login works!</p>
+<div class="container  ">
+    <form class="my-3 div__form bg-light" >
+        <div class="mt-3 mb-5">
+            <h3 class="text-center fs-2 fw-bold titulo__color">{{tituloFormLogin}}</h3>
+        </div>
+        <div class="row">
+            <div class="col-md-12 col-sm-6 col-xs-12">
+                <!---------gmail---------------------->
+                <div class="mb-4">
+                    <div class="form-floating">
+                        <input type="email" class="form-control input__border" id="email" name="email" placeholder="email"  >
+                        <label for="email" class="form-label label__color">email</label>
+                    </div>  
+                </div>
+            </div>
+            <div class="col-md-12 col-sm-6 col-xs-12">
+                <!---------pass---------------------->
+                <div class="mb-4">
+                    <div class="form-floating">
+                        <input type="password" class="form-control input__border" id="password" name="password" placeholder="password"  >
+                        <label for="password" class="form-label label__color">Contraseña</label>
+                    </div>  
+                </div>
+            </div>
+        </div>
+        
+        <!-----------boton-------------------->
+        <div class="my-3">
+            <button class="btn bg__btn w-100" >Enviar</button>
+        </div>
+    </form> 
+</div>
