--- a/src/app/componentes/form-registro/form-registro.component.html
+++ b/src/app/componentes/form-registro/form-registro.component.html
@@ -1,7 +1,7 @@
 <div class="container  ">
                 <form class="my-3 div__form bg-light" >
                     <div class="mt-3 mb-5">
-                        <h3 class="text-center fs-2 fw-bold titulo__color">{{tituloForm}}</h3>
+                        <h3 class="text-center fs-2 fw-bold titulo__color">{{tituloFormRegistro}}</h3>
                     </div>
                     <div class="row">
                         <div class="col-md-6 col-sm-6 col-xs-12">
