--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,9 @@
-<p>login works!</p>
+<div class="container">
+    <div class="container">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-md-6 col-sm-6 col-xs-12 ">
+                <app-form-login></app-form-login>
+            </div>
+        </div>
+    </div>
+</div>
