routes children y componente paises agregados

--- a/src/app/componentes/form-registro/form-registro.component.html
+++ b/src/app/componentes/form-registro/form-registro.component.html
@@ -44,7 +44,7 @@
                     
                     <!-----------boton-------------------->
                     <div class="my-3">
-                        <button class="btn bg__btn w-100" >Enviar</button>
+                        <button class="btn bg__btn w-100" >Registrate</button>
                     </div>
                 </form> 
 </div>
