--- a/src/app/componentes/form-login/form-login.component.html
+++ b/src/app/componentes/form-login/form-login.component.html
@@ -1,7 +1,12 @@
-<div class="container  ">
+<div class="container   ">
     <form class="my-3 div__form bg-light" >
-        <div class="mt-3 mb-5">
+        <div class="mt-1 mb-3">
             <h3 class="text-center fs-2 fw-bold titulo__color">{{tituloFormLogin}}</h3>
+        </div>
+        <div class="mt-2 mb-5 d-flex justify-content-center">
+            <div class="bg-primary bg-opacity-25 rounded-5 p-3">
+                <img class="mx-auto" style="width:70px ;" src="https://img.icons8.com/dusk/2x/guest-male.png" alt="">
+            </div>
         </div>
         <div class="row">
             <div class="col-md-12 col-sm-6 col-xs-12">
@@ -26,7 +31,7 @@
         
         <!-----------boton-------------------->
         <div class="my-3">
-            <button class="btn bg__btn w-100" >Enviar</button>
+            <button  class="btn bg__btn w-100" >Ingresar</button>
         </div>
     </form> 
 </div>
