modificacion de templates paises

--- a/src/app/componentes/bienvenidos/bienvenidos.component.html
+++ b/src/app/componentes/bienvenidos/bienvenidos.component.html
@@ -1,7 +1,7 @@
 <div class="container py-5">
-    <h1 class="text-center fw-bold fs-1">¡Bienvenido..!</h1>
-    <h2 class="text-center">¿Quieres conocer los paises mas Importante de Latinoamérica?</h2>
-    <p>
-        
-    </p>
+    <h1 class="text-center fw-bold fs-1 mb-4">¡Bienvenido..!</h1>
+    <h3 class="text-center">Aqui Conoceras los paises más Importantes de Latinoamérica</h3>
+    <div class="container my-5">
+        <img class="bienvenido__img" src="https://ouch-cdn2.icons8.com/iHfq-N394y4ehvZFbLtwVszCWdN2Lhz7zGF2cn7w8sI/rs:fit:256:242/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9zdmcvMzI2/LzI4MTgzNjg4LTNh/ZTQtNDAwNC1iZGNh/LTE5MTIxY2Y5Nzhj/MC5zdmc.png" alt="">
+    </div>
 </div>
