--- a/src/app/componentes/paises/chile/chile.component.html
+++ b/src/app/componentes/paises/chile/chile.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <div class="container">
+    <div class="container py-5">
         <div>
-            <p>Nombre del País:  chile </p> 
+            <h2 class="text-center fs-1 fw-bold mb-5">Chile </h2> 
             <div>
-                <img style="width: 40%;" src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Flag_of_Chile.png" alt="">
+                <img  class="paises__img" src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Flag_of_Chile.png" alt="">
             </div>
-            <div>
-                <p>es un país largo y angosto que se extiende por el borde occidental de Sudamérica, con más de 6,000 km 
+            <div class="container my-5">
+                <p  class="paises__p">Es un país largo y angosto que se extiende por el borde occidental de Sudamérica, con más de 6,000 km 
                     de costa en el océano Pacífico. Santiago, su capital, se ubica en un valle rodeado de los Andes y la 
                     cordillera de la Costa. En la Plaza de Armas de la ciudad, bordeada de palmeras, se encuentra la catedral 
                     neoclásica y el Museo de Historia Nacional. El enorme Parque Metropolitano cuenta con piscinas, un jardín botánico
