--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,6 +10,7 @@
             <div class="navbar-nav">
                 <a class="nav__link__a fw-bold btn btn-outline-dark"  routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Registrate</a>
                 <a class="nav__link__a fw-bold btn btn-outline-dark" routerLink="/login" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"> Login</a>
+                <a class="nav__link__a fw-bold btn btn-outline-dark" routerLink="/home" routerLinkActive="active"> Inicio</a>
             </div>
           </div>
         </div>
