--- a/src/app/componentes/paises/uruguay/uruguay.component.html
+++ b/src/app/componentes/paises/uruguay/uruguay.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <div class="container">
+    <div class="container py-5">
         <div>
-            <p>Nombre del País:  Uruguay </p> 
+            <h2 class="text-center fs-1 fw-bold mb-5">Uruguay </h2> 
             <div>
-                <img style="width: 40%;" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Flag_of_Uruguay.svg/1200px-Flag_of_Uruguay.svg.png" alt="">
+                <img class="paises__img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Flag_of_Uruguay.svg/1200px-Flag_of_Uruguay.svg.png" alt="">
             </div>
-            <div>
-                <p class="p_align">es un país de Sudamérica conocido por su interior verde y costa bordeada de playas. La capital,
+            <div class="container my-5" >
+                <p class="paises__p">Es un país de Sudamérica conocido por su interior verde y costa bordeada de playas. La capital,
                      Montevideo, se ubica en torno a la plaza Independencia, donde alguna vez hubo una ciudadela española. 
                      Esta lleva a la Ciudad Vieja, casas coloniales y el Mercado del Puerto con muchos
                      restaurantes de carnes. La Rambla es un paseo costero con puestos de pescados, muelles y parques.
