--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,7 +1,12 @@
 .menu__bg{
-    background-color: #89C4E1 ;
+    background-color: #000 ;
 
 }
 .a__color{
-    background-color: #6D67E4;
+    background-color: #fff;
+    color: #6C00FF;
+}
+.a__activate{
+    background-color: #6C00FF;
+    color: #fff !important;
 }
