--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid login__bg py-5">
     <div class="container mt-3 mb-3">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-md-6 col-sm-6 col-xs-12  ">
